--- a/pages/development-center.html
+++ b/pages/development-center.html
@@ -371,7 +371,7 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="advantage-item center-advantages__advantage-item --no-descButton" data-advantageBlock-id="painting" id="painting">
+                        <div class="advantage-item center-advantages__advantage-item --no-descButton --sectionPadding" data-advantageBlock-id="painting" id="painting">
                             <div class="my-container advantage-item__container">
                                 <div class="advantage-item__desc">
                                     <div class="block-title advantage-item__desc__title">Живопись <br> с&nbsp;5&nbsp;лет</div>
@@ -469,7 +469,7 @@
                                 </div>
                             </div>
                         </div>
-                        <div class="advantage-item center-advantages__advantage-item --no-descButton" data-advantageBlock-id="summer-holidays" id="summer-holidays">
+                        <div class="advantage-item center-advantages__advantage-item --no-descButton --sectionPadding" data-advantageBlock-id="summer-holidays" id="summer-holidays">
                             <div class="my-container advantage-item__container">
                                 <div class="advantage-item__desc">
                                     <div class="block-title advantage-item__desc__title">Летние каникулы
@@ -682,7 +682,7 @@
             </section>
 
             <!-- ВЫНЕС ОФОРМЛЕНИЕ ОТДЕЛЬНО (БЛОК ШАБЛОННЫЙ) -->
-            <section class="why-choose-us main__why-choose-us">
+            <section class="why-choose-us main__why-choose-us --sectionPadding">
                 <div class="my-container why-choose-us__container">
                     <h2 class="block-title why-choose-us__title">за что нас выбирают</h2>
                     <div class="accordion why-choose-us__accordion" id="accordionExample">
@@ -840,7 +840,7 @@
             </section>
 
             <!-- ВЫНЕС ОФОРМЛЕНИЕ ОТДЕЛЬНО (БЛОК ШАБЛОННЫЙ). ГЛАВНОЕ ЧТОБ data АТРИБУТ БЫЛ УНИКАЛЬНЫМ ДЛЯ РАЗНЫХ ТАКИХ БЛОКОВ И ССЫЛКИ НА КАРТИНКИ СЛАЙДОВ -->
-            <section class="staff main__staff" data-staff-type="teachers">
+            <section class="staff main__staff --sectionPadding" data-staff-type="teachers">
                 <div class="my-container staff__container">
                     <h2 class="block-title staff__title">наши педагоги</h2>
                     <div class="staff__slider">
@@ -958,7 +958,7 @@
             </section>
 
             <!-- ВЫНЕС ОФОРМЛЕНИЕ ОТДЕЛЬНО (БЛОК ШАБЛОННЫЙ) -->
-            <section class="reviews main__reviews">
+            <section class="reviews main__reviews --sectionPadding">
                 <div class="my-container reviews__container">
                     <h2 class="block-title reviews__title">отзывы</h2>
                     <div class="reviews__content">
@@ -1076,7 +1076,7 @@
             </section>
 
             <!-- ЕСЛИ feedback-block НАХОДИТЬСЯ ВНЕ КАКОЙ-ЛИБО СЕКЦИИ, ТО НАДО ЕГО ОБЕРНУТЬ ВНУТРЬ БЛОКА feedback, ЕСЛИ ОН ЧАСТЬ СЕКЦИИ (КАК НА ГЛАВНОЙ), ТАМ СВОЯ УНИКАЛЬНАЯ ОБЁРТКА -->
-            <section class="feedback main__feedback">
+            <section class="feedback main__feedback --sectionPadding">
                 <div class="my-container feedback__container">
                     <article class="feedback-block">
                         <div class="my-container feedback-block__container">
@@ -1117,7 +1117,7 @@
 
 
             <!-- ВЫНЕС ОФОРМЛЕНИЕ ОТДЕЛЬНО (МОЖНО ВНЕСТИ БЛОК В LAYOUT) -->
-            <section class="contacts main__contacts">
+            <section class="contacts main__contacts --sectionPadding">
                 <div class="my-container contacts__container">
                     <div class="contacts__inner">
                         <div class="contacts__body">
@@ -1171,11 +1171,15 @@
             <div class="my-container footer__container">
                 <div class="footer__inner">
                     <div class="footer__left">
-                        <a href="../index.html" class="footer__logo-link">
+                        <div class="footer-left__top">
+                        <a href="" class="footer__logo-link">
                             <img src="../assets/images/logo-white.svg" alt="" class="footer__logo-img">
                         </a>
+                        <button class="my-button footer__button-reviews">оставить отзыв</button>
+                        </div>
                         <div class="footer__info-text">Сеть частных детских садов <br> и центр развития детей <br> с
                             лицензией № 9378 от 29.07.2016 </div>
+                        <button class="my-button footer__button-reviews --mobile">оставить отзыв</button>
                     </div>
                     <div class="footer__right">
                         <nav class="footer__menu">
@@ -1208,6 +1212,8 @@
     <script src="../assets/libs/bootstrap/popper.min.js"></script>
     <script src="../assets/libs/fancybox/fancybox.umd.js"></script>
 
+    <script src="https://api-maps.yandex.ru/2.1/?apikey=f028c4f8-776d-4ba3-b079-94a909b9cca1&lang=ru_RU"></script>
+
 
     <!-- ОБЩИЕ СКРИПТЫ -->
     <script src="../assets/js/phone-mask.js"></script>
@@ -1218,6 +1224,7 @@
 
     <script src="../assets/js/sections/staff.js"></script>
     <script src="../assets/js/sections/reviews.js"></script>
+    <script src="./assets//js/sections/contacts.js"></script>
     
 
 
@@ -1290,7 +1297,6 @@
         });
     </script>
 
-    <!-- СКРИПТ БЛОКА РАЗВИВАЮЩАЯ СРЕДА (ВЫНЕСТИ ЛОГИКУ double-slider ОТДЕЛЬНО И ОТДЕЛИТЬ ЛОГИКУ ПОСТРОЕНИЯ КОНТЕНТА СЛАЙДЕРОВ ПОД ВЫСОТУ, ДОБАВИТЬ В ЭТОТ СКРИПТ ВЫСОТЫ ПРОСТО НАХОЖДЕНИЕ ОПРЕДЕЛЁННЫХ СЛАЙДЕРОВ ВСЕХ И ПРИМЕНЯТЬ К НИМ ЭТОТ СКРИПТ ВЫСОТЫ) -->
     <script>
         const devEnvTextSlider = document.querySelector('.double-slider__text-slider');
         const devEnvironmenTextSwiper = new Swiper('.double-slider__text-swiper', {
